--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1251,6 +1251,7 @@
                 <label for="turn-select-btn">Чей ход?</label>
                 <label>На кубиках:</label>
             </div>
+            
             <div class="turn-dice-block">
                 <div class="turn-dice-content">
                     <div class="turn-dice-section">
