--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1174,6 +1174,10 @@
                 </div>
                 </div>
             </div>
+            <div class="game-type-right">
+                <label>Тип игры</label>
+                <button id="game-type-button">Манигейм</button>
+            </div>
         </div>
         <div class="game-type">
             <div class="jb-wrap">
@@ -1261,10 +1265,7 @@
                     </div>
                 </div>
             </div>
-            <div class="game-type-right">
-                <label>Тип игры</label>
-                <button id="game-type-button">Манигейм</button>
-            </div>
+
         </div>
         <div class="game-panel">
             <div class="match-panel" style="display: none;">
