--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -214,9 +214,8 @@
         .game-type-right {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
             gap: 0.5rem;
-            margin-left: auto;
+            margin-left: 10%;
         }
 
         .cube-controls-block {
