--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1191,6 +1191,12 @@
                 </div>
             </div>
             <div class="cube-controls-block">
+                <div class="cube-controls-labels">
+                    <label for="cube-shown-select">Показан куб?</label>
+                    <label for="cube-value-select">Значение куба</label>
+                    <label for="cube-owner-select-btn">Чей куб?</label>
+                    <label for="max-cube-select">Макс куб</label>
+                </div>
                 <div class="cube-shown-selector">
                     <div class="cube-selector-custom">
                         <div class="cube-selector-button empty" id="cube-shown-button" data-cube="shown">0</div>
